--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -153,7 +153,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="30" height="21"/>
                                 </variation>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="daJ-va-kf1">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="5" translatesAutoresizingMaskIntoConstraints="NO" id="daJ-va-kf1">
                                 <rect key="frame" x="366" y="257" width="184" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3s6-Gu-jCo"/>
@@ -191,7 +191,7 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79l-eY-Qm8">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79l-eY-Qm8">
                                                     <rect key="frame" x="551" y="42" width="41" height="41"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="79l-eY-Qm8" secondAttribute="height" id="Y7E-Xh-YMH"/>
@@ -267,7 +267,7 @@
                                     <constraint firstAttribute="height" constant="185" id="iCp-M5-Ro7"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWy-7k-amI">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWy-7k-amI">
                                 <rect key="frame" x="556" y="261" width="28" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="aJf-Yr-LXi"/>
@@ -349,7 +349,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d5n-Jd-hFT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="d5n-Jd-hFT">
                                 <rect key="frame" x="0.0" y="64" width="600" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="wXf-Bg-5Qe"/>
@@ -400,14 +400,41 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0L-mQ-T4v">
+                                <rect key="frame" x="0.0" y="264" width="600" height="336"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJH-gj-McE">
+                                        <rect key="frame" x="193" y="153" width="215" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="215" id="MGc-ab-KXq"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="MaZ-km-UhN"/>
+                                            <constraint firstAttribute="height" constant="30" id="YvI-oK-avm"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="215" id="ZnP-JU-cmW"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="I'm ready. Start Pilot!">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="eJH-gj-McE" secondAttribute="centerX" id="LcZ-9i-rOH"/>
+                                    <constraint firstAttribute="centerY" secondItem="eJH-gj-McE" secondAttribute="centerY" id="cIS-W5-0Sc"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="3d9-yW-p9W"/>
                             <constraint firstItem="Ade-pS-9f3" firstAttribute="top" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="4YJ-BG-tuK"/>
+                            <constraint firstItem="R0L-mQ-T4v" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="8g9-qi-36o"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QMD-oO-359" secondAttribute="trailing" constant="-16" id="Sgx-lJ-x7p"/>
                             <constraint firstAttribute="trailingMargin" secondItem="d5n-Jd-hFT" secondAttribute="trailing" constant="-16" id="TOV-ue-Mfg"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="bottom" secondItem="QMD-oO-359" secondAttribute="bottom" id="UHO-hh-6fB"/>
+                            <constraint firstItem="Ade-pS-9f3" firstAttribute="top" secondItem="R0L-mQ-T4v" secondAttribute="bottom" id="aqO-QM-y9B"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="R0L-mQ-T4v" secondAttribute="trailing" constant="-16" id="av8-hc-bb3"/>
+                            <constraint firstItem="R0L-mQ-T4v" firstAttribute="top" secondItem="QMD-oO-359" secondAttribute="bottom" id="kUX-5q-u9t"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="qnY-sj-joi"/>
                             <constraint firstItem="QMD-oO-359" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="sUT-j5-ORC"/>
                         </constraints>
@@ -446,5 +473,6 @@
     </scenes>
     <resources>
         <image name="crocs.jpg" width="750" height="498"/>
+        <image name="image_placeholder.jpg" width="1280" height="800"/>
     </resources>
 </document>
