--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
-                                                            <variation key="heightClass=compact" ambiguous="YES" misplaced="YES">
+                                                            <variation key="heightClass=compact" misplaced="YES">
                                                                 <rect key="frame" x="282" y="20" width="30" height="21"/>
                                                             </variation>
                                                         </label>
