--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -346,20 +346,20 @@
                         <viewControllerLayoutGuide type="bottom" id="Ade-pS-9f3"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="1kl-y6-Q3R">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="d5n-Jd-hFT">
-                                <rect key="frame" x="0.0" y="64" width="600" height="200"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="wXf-Bg-5Qe"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMD-oO-359">
-                                <rect key="frame" x="0.0" y="214" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="214" width="320" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Product Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jOX-ZT-A3g">
-                                        <rect key="frame" x="8" y="10" width="456" height="30"/>
+                                        <rect key="frame" x="8" y="10" width="176" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Evj-on-C2O"/>
                                         </constraints>
@@ -368,7 +368,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Price (Aprox.)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zbx-02-Oqi">
-                                        <rect key="frame" x="472" y="10" width="120" height="30"/>
+                                        <rect key="frame" x="192" y="10" width="120" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="1U5-xt-dxB"/>
                                             <constraint firstAttribute="height" constant="30" id="KCS-Rp-oSF"/>
@@ -394,17 +394,22 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWy-V5-4T8">
-                                <rect key="frame" x="16" y="72" width="110" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWy-V5-4T8">
+                                <rect key="frame" x="0.0" y="64" width="320" height="150"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="Select an image">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="pickImage:" destination="lGO-gd-hbl" eventType="touchUpInside" id="0m8-iP-dAY"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0L-mQ-T4v">
-                                <rect key="frame" x="0.0" y="264" width="600" height="336"/>
+                                <rect key="frame" x="0.0" y="264" width="320" height="304"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJH-gj-McE">
-                                        <rect key="frame" x="193" y="153" width="215" height="30"/>
+                                        <rect key="frame" x="53" y="137" width="215" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="215" id="MGc-ab-KXq"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="MaZ-km-UhN"/>
@@ -429,13 +434,17 @@
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="3d9-yW-p9W"/>
                             <constraint firstItem="Ade-pS-9f3" firstAttribute="top" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="4YJ-BG-tuK"/>
                             <constraint firstItem="R0L-mQ-T4v" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="8g9-qi-36o"/>
+                            <constraint firstItem="MWy-V5-4T8" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="KKt-ez-M1v"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QMD-oO-359" secondAttribute="trailing" constant="-16" id="Sgx-lJ-x7p"/>
                             <constraint firstAttribute="trailingMargin" secondItem="d5n-Jd-hFT" secondAttribute="trailing" constant="-16" id="TOV-ue-Mfg"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="bottom" secondItem="QMD-oO-359" secondAttribute="bottom" id="UHO-hh-6fB"/>
                             <constraint firstItem="Ade-pS-9f3" firstAttribute="top" secondItem="R0L-mQ-T4v" secondAttribute="bottom" id="aqO-QM-y9B"/>
                             <constraint firstAttribute="trailingMargin" secondItem="R0L-mQ-T4v" secondAttribute="trailing" constant="-16" id="av8-hc-bb3"/>
                             <constraint firstItem="R0L-mQ-T4v" firstAttribute="top" secondItem="QMD-oO-359" secondAttribute="bottom" id="kUX-5q-u9t"/>
+                            <constraint firstItem="QMD-oO-359" firstAttribute="top" secondItem="MWy-V5-4T8" secondAttribute="bottom" id="lWA-Q1-1Fu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MWy-V5-4T8" secondAttribute="trailing" constant="-16" id="mcB-91-aij"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="qnY-sj-joi"/>
+                            <constraint firstItem="MWy-V5-4T8" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="qoI-Zq-5aY"/>
                             <constraint firstItem="QMD-oO-359" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="sUT-j5-ORC"/>
                         </constraints>
                         <variation key="default">
@@ -447,6 +456,13 @@
                             </mask>
                         </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="pickedImage" destination="d5n-Jd-hFT" id="fKj-dN-vuQ"/>
+                        <outlet property="productName" destination="jOX-ZT-A3g" id="tKw-SQ-Ab0"/>
+                        <outlet property="productPrice" destination="Zbx-02-Oqi" id="ENq-5N-nPk"/>
+                        <outlet property="selectImageButton" destination="MWy-V5-4T8" id="hbh-NC-6B8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gbR-PA-vTx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
