--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PilotCell" id="hIM-Rq-2Tf">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProductCell" id="hIM-Rq-2Tf" customClass="ProductTableViewCell" customModule="Pilot_this" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hIM-Rq-2Tf" id="5fL-ZS-1Ak">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -100,6 +100,7 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="nameLabel" destination="C8g-Gk-5hv" id="hSk-7V-JGP"/>
                                             <segue destination="PL4-Nv-KcG" kind="show" id="QqP-20-P5c"/>
                                         </connections>
                                     </tableViewCell>
